--- a/bio.html
+++ b/bio.html
@@ -1,9 +1,9 @@
 <!doctype html>
 
-<header>
+<head>
 	<title>bio</title>
 	<link rel="stylesheet" href="bio_style.css"/>
-</header>
+</head>
 
 <body>
 	<h0 class="header">bio</h0>
