--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-	<h0 class="header">bio</h0>
+	<h0>bio</h0>
 	<h4>Hi, I'm Colin Murphy. Currently I'm a freshman at pursuing a BA from Tufts University in computer science and a BFA in Studio art at the School of the Museum of Fine Arts in Boston, with a focus in photography. Within studio art, I'm really interested in the intersection of tech, the arts, and culture, particularly with personal representation on social media and other web interfaces.</h4>
 </body>
