--- a/bio.html
+++ b/bio.html
@@ -1163,7 +1163,7 @@ style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'>Colin
-is a sophomore at Tufts University and School of the Museum of Fine Arts in Boston. His hobbies include writing, running, and overindulgent meal preparation. Currently, Colin is interested in queer masculinities. He's exploring this through self-reflection, conversation, and sometimes field research, often with a camera in hand. <o:p></o:p></span></p>
+is a sophomore at Tufts University, where he studies user-centered design, computer science, german, and studio art. His hobbies include writing, running, and overindulgent meal preparation. <o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'><o:p>&nbsp;</o:p></span></p>
 
@@ -1172,7 +1172,7 @@ is a sophomore at Tufts University and School of the Museum of Fine Arts in Bost
 </div>
 
 <div class="home">
-        <a href="../test/index.html"><img src="../test/gifs/home.gif" id="home" style="width:25px"></a>
+        <a href="./index.html"><img src="./gifs/home.gif" id="home" style="width:25px"></a>
 </div>
 
 </body>
