updated website, i'm not a sophomore anymore, etc

--- a/bio.html
+++ b/bio.html
@@ -1163,7 +1163,7 @@ style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'>Colin
-is a sophomore at Tufts University, where he studies computer science, user-centered design, german, and studio art. His hobbies include writing, running, and overindulgent meal preparation. <o:p></o:p></span></p>
+is a Junior at Tufts University, where he studies computer science, german, and design. His hobbies include photography, running, and overindulgent meal preparation. <o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'><o:p>&nbsp;</o:p></span></p>
 
